[tool.poetry]
name = "discordbot-gpt"
version = "0.1.0"
description = ""
authors = ["kn-shimada <xianrendaotian012@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^2.2.3"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
